# humanoide

./: PararseFrontB_v1.ppr  README.md  ax12.h  caminando.ino  humanoideB_v1.ppr  humanoideB_v10.ppr  humanoideB_v11.ppr  humanoideB_v13.ppr  humanoideB_v15.ppr  humanoideB_v16.ppr  humanoideB_v17.ppr  juliyo.ppr  movimientosTutorial.ppr  pararseB_v1.ppr  pararseBack.ppr  poses.h
Arbotix/PruebasArbotix/: posesPatadaIzquierda.h
Arbotix/caminar/: caminar.ino  patadaIzquierda.h  poses.h  posesVoltearDerecha.h  posesVoltearIzquierda.h  voltearDer.h  voltearIzq.h
Arbotix/caminarConAprendizaje/: caminarConAprendizaje.ino  pararseBocaAbajo.h  pararseBocaArriba.h  patadaDerecha.h  poses.h
Arbotix/servoMotor/: servoMotor.ino
Graficas Gyro/: Prueba22  Prueba23  Prueba24  Prueba25  Prueba26  Prueba27  Prueba28  ejey  lecturasGyro  leerArduino.py  octave-core
Libro/libro/: Makefile  acta.tex  glosario.glo  (+22 more)
OpenCv/: #detectar.cpp#  .gitignore  Arbotix.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deteccionPelota.cpp  detectar  detectar.cpp  main  prueba.cpp
OpenCv/estados/: CamAbajoMedio.cpp  CamAbajoMedio.cpp~  CamDerechaAbajo.cpp  CamDerechaAbajo.cpp~
Paper/: IEEEtranMC1.cls  MCIng2014.bib  Makefile~  paperCuenca.aux  paperCuenca.tex  prueba.tex  pruebasGraficos.ods  referencias.bib
PosesPypose/: voltearDerecha_3.ppr  voltearIzquierda.ppr
SeteoMotoresYsensores/: SeteoMotoresYsensores.ino
caminando/: caminando.ino  poses.h
caminar/: caminar.ino  poses.h  poses2.h  poses3.h
libreriasModificadas/: ax12.h
porFormas/: Makefile  juliana.cpp
(+99 files in other folders)
